# differ

./: .differrc.json  .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/git/: mod.rs  types.rs
