[package]
name = "differ"
version = "0.1.0"
description = "A git diff viewer desktop application"
authors = ["differ"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "differ_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "differ"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
thiserror = "2"
chrono = "0.4"
url = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
